fix: make extended molecular assembler Java 8 compatible